<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *     Copyright (C) 2010~2014 FMSoft (Espier Studio)
 *
 *    This program is free software: you can redistribute it and/or modify
 *    it under the terms of the GNU Affero General Public License as published by
 *    the Free Software Foundation, either version 3 of the License, or
 *    (at your option) any later version.
 *
 *    This program is distributed in the hope that it will be useful,
 *    but WITHOUT ANY WARRANTY; without even the implied warranty of
 *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
 *    GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        >
        <TextView
            android:id="@+id/lgc_tv_service_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/lgc_btn_accessibility_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lgc_btn_accessibility"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/lgc_websocket_url"
        />
    <EditText
        android:id="@+id/lgc_edit_websocket_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/lgc_websocket_url_hint"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/lgc_username"
        />
    <EditText
        android:id="@+id/lgc_edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/lgc_password"
        />
    <EditText
        android:id="@+id/lgc_edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        >
        <Button
            android:id="@+id/lgc_btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lgc_start"
        />
        <Button
            android:id="@+id/lgc_btn_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lgc_stop"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_meteor_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:singleLine="true"
        />
</LinearLayout>

